--- a/InfinityV2/src/Components/Home/Faqs/Faqs.module.css
+++ b/InfinityV2/src/Components/Home/Faqs/Faqs.module.css
@@ -67,7 +67,7 @@
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     cursor: pointer;
-    transition: box-shadow 0.3s ease;
+    transition: box-shadow 0.3s ;
 }
 
 .fqaCard:hover {
@@ -92,7 +92,7 @@
 .arrowIcon {
     width: 24px;
     height: 24px;
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ;
 }
 
 .fqaCard.active .arrowIcon {
@@ -100,19 +100,29 @@
 }
 
 .answer {
+    font-family: Outfit;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    text-align: left;
+
     max-height: 0;
+    opacity: 0;
     padding: 0 20px;
     overflow: hidden;
     background-color: #f9f9f9;
     color: var(--greyscale-600);
-    transition: max-height 0.5s ease, padding 0.5s ease;
+    transition: max-height 0.3s cubic-bezier(0, 1, 0, 1), opacity 0.3s ease-out, padding 0.3s ease-out;
+    text-align: start;
 }
 
 .fqaCard.active .answer {
-    max-height: 500px; /* Adjust this value based on your content */
+    max-height: 2000px; /* This should be larger than your longest answer */
+    opacity: 1;
     padding: 20px;
-    border-top: 1px solid var(--greyscale-600);
+    transition: max-height 0.5s ease-in-out, opacity 0.3s ease-in, padding 0.3s ease-in;
 }
+
 
 /* Tablet Responsiveness */
 @media (max-width: 768px) {
@@ -141,7 +151,9 @@
 /* Phone Responsiveness */
 @media (max-width: 480px) {
     .featureSection {
-        padding: 80px 10px;
+        display: flex;
+        justify-content: center;
+        padding: 80px 0px;
     }
 
     .frequentlyAskedQuestions {
