--- a/InfinityV2/src/Components/Home/PricingSection/PricingSection.module.css
+++ b/InfinityV2/src/Components/Home/PricingSection/PricingSection.module.css
@@ -1,3 +1,20 @@
+.popular{
+    font-size: 9.17px;
+    font-weight: 600;
+    line-height: 14.68px;
+    letter-spacing: 0.18270103633403778px;
+    text-align: center;
+
+    color: #ffffff;
+    margin: 0px;
+    background-color: var(--color-primary-green);
+    width: 100%;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .pricingContainer {
     margin: 80px 20px;
     text-align: center;
@@ -19,13 +36,21 @@
     line-height: 27px;
     text-align: center;
     color: #666;
-    margin: 0;
+    margin: 0px;
   }
   
   .pricingPlans {
+    margin: 8% 0px 8% 0px;
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
+  }
+  .pricingPlan:nth-child(2){
+    padding: 0px;
+    overflow: hidden;
+  }
+  .pricingPlan:nth-child(2) .content{
+    padding: 20px;
   }
   
   .pricingPlan {
@@ -42,7 +67,7 @@
     line-height: 21.68px;
     letter-spacing: 0.22581025958061218px;
     text-align: left;
-    margin: 0px;
+    
   }
   
   .price {
@@ -50,6 +75,7 @@
     font-weight: 500;
     line-height: 37.42px;
     text-align: left;
+    margin:2px 0 15px 0;
   }
   
   .price span {
